--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "mongoose": "^9.1.0",
     "morgan": "^1.10.1",
+    "nanoid": "^5.1.6",
     "uuid": "^13.0.0",
     "winston": "^3.18.3"
   },
