--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.1",
     "nanoid": "^5.1.6",
     "uuid": "^13.0.0",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
